# variations

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  tests.yml
.run/: pytest.run.xml
html/: index.html
testing/: helper.py  requirements.txt  test_face_detection.py  test_image_processing.py  test_variation.py
tests/: conftest.py  helper.py  requirements.txt  test_exif.py  test_face_detection.py  test_filters.py  test_formats.py  test_image_processing.py  test_migration.py  test_processors.py  test_scaler.py  test_utils.py  test_variation.py
variations/: __init__.py  conf.py  processors.py  scaler.py  typing.py  utils.py  variation.py
variations/processors/: __init__.py  base.py  crop.py  face_detection.py  filters.py  overlay.py  resize.py
