[metadata]
name = variations
version = attr: variations.__version__
description = A simple interface that allows to process images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dldevinc/variations
license = BSD
author = Mihail Mishakin
author_email = x896321475@gmail.com
maintainer = Mihail Mishakin
maintainer_email = x896321475@gmail.com
platforms = OS Independent
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.5
install_requires =
  Pillow >= 5.2.0
  pilkit >= 1.1.6
packages = find:

[options.extras_require]
facedetection = face_recognition
stackblur = pillow-stackblur
all =
  face_recognition
  pillow-stackblur
testing =
  face_recognition
  pytest
  pytest-cov
  pytest-xdist
  pytest-subtests

[flake8]
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
exclude =
  .git
  .tox
  .eggs
  .venv
  __pycache__
  build/
  dist/

# Things to ignore:
#   E128: continuation line under-indented (too noisy)
#   W503: line break before binary operator
#   W601: has_key() deprecated (false positives)
#   B011: Don't use assert False
ignore = E128,W503,W601,B011

[mypy]
files = variations
ignore_missing_imports = true
check_untyped_defs = True
ignore_errors = False
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[coverage:run]
source = variations
omit =
  */__init__.py

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover

  # Don't complain about missing debug-only code:
  def __repr__
  if self\.debug

  # Don't complain if tests don't hit defensive assertion code:
  raise AssertionError
  raise NotImplementedError

  # Don't complain if non-runnable code isn't run:
  if 0:
  if __name__ == .__main__.:

[tool:isort]
line_length = 88
multi_line_output = 3
use_parentheses = True
include_trailing_comma = True
skip = .venv,.tox
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY

[tool:pytest]
addopts = --showlocals -rfs
filterwarnings =
  ignore:.*Remove the context parameter
norecursedirs =
  dist
  build
  .tox
