[metadata]
name = variations
version = attr: variations.__version__
description = A simple interface that allows processing of images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dldevinc/variations
license = BSD license
author = Mihail Mishakin
author_email = x896321475@gmail.com
maintainer = Mihail Mishakin
maintainer_email = x896321475@gmail.com
platforms = OS Independent
classifiers =
  Intended Audience :: Developers
  Development Status :: 4 - Beta
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Software Development :: Libraries :: Python Modules

[bdist_wheel]
universal = 1

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
install_requires =
  Pillow>=5.2.0
  pilkit>=1.1.6
packages = find:

[options.extras_require]
facedetection = face_recognition
stackblur = pillow-stackblur
full =
  face_recognition
  pillow-stackblur

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 90
known_first_party = app

[flake8]
max-line-length = 90
max-complexity = 10
exclude =
  tests/
ignore =
  # Line too long
  E501
  # Continuation line under-indented for visual indent
  E128
  # Line break after binary operator
  W503
  W504

[mypy]
files = variations
strict_optional = False
check_untyped_defs = True
allow_redefinition = True
pretty = True

[coverage:run]
source = variations
omit =
  *migrations*
  *tests*
